# techbridge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  enhanced_config_report_20250814_152947.yaml  enhanced_config_report_20250814_153334.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architectural_refactoring_plan.md  coding_standards.md  domain_architecture.md  dual_audit_final_comprehensive_report.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
app/: __init__.py  main.py
app/api/: health.py  slack.py  webhook.py
app/api/v1/: __init__.py  auth.py  progress.py  slack.py  test.py  webhooks.py
app/core/: auth.py  config.py  database.py  deps.py  error_handlers.py  exceptions.py  logging.py  redis.py  security.py
app/crud/: workflow.py
app/middleware/: logging.py  rate_limit.py  request_id.py
app/mini_apps/project_initializer/: .env.example  .gitignore  CLAUDE.md  CONSTRAINT_COMPLIANCE_FRAMEWORK.md  GITHUB_URL_CLEANING_IMPLEMENTATION.md  GLOBAL_INSTALL.md  Handover.md  PJINIT_P1_EMERGENCY_ROADMAP.md  PJINIT_V2_REFACTORING_PLAN.md  PJINIT_V2_ULTRA_CONSERVATIVE_PLAN.md  PJinit.build.ps1  Phase4_Implementation_Summary.md  QUALITY_ASSURANCE_FRAMEWORK.md  SESSION_2025_08_15_RECOMMENDATIONS.md  bot_id_diagnostic.py  create_desktop_shortcut.ps1  debug_import.py  github_client.py  google_sheets.py  hand_over.md  install_global_dependencies.ps1  install_windows_dependencies.ps1  main.py  main_refactored.py  pjinit_phase2d_constraint_compliance_verification.md  pjinit_phase2d_performance_report.md  run_global.ps1  run_phase2d_test_simple.py  slack_client.py  test_all_candidate_sheets.py  test_channel_creation.py  test_complete_slack_integration.py  test_corrected_bot_ids.py  test_corrected_pjinit_specification.py  test_corrected_yamashiro_data_retrieval.py  test_direct_sheets_connection.py  test_fixed_github_app_invitation.py  test_github_integration.py  test_github_url_cleaning.py  test_integrated_github_processing.py  (+19 more)
app/models/: __init__.py  enums.py  workflow.py
app/schemas/: __init__.py  auth.py  progress.py  webhook.py
app/services/: github.py  google_sheets.py  slack.py  workflow.py  workflow_manager.py
config/: paths_config.yaml  server_config.yaml  settings.json  theme_config.yaml  ui_config.yaml
docs/: HARDCODE_EXTERNALIZATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  SPECIFICATION.md  アイディアメモ.md
scripts/: config_system_tester.py  hardcode_detector.py  start_dev.sh
techwf/: .env.example  IMPLEMENTATION_STATUS.md  config.json  debug_main_window.py  debug_no_gui.py  main.py  quick_test.py  simple_import_test.py  test_data_binding.py  test_file_watcher_simulation.py  test_gui_creation.py  test_gui_headless.py  test_gui_startup.py  test_integration.py  test_output.txt  test_table_display.py
techwf/docs/: implementation_summary_phase0_6.md  test_results_2025_08_08.md
techwf/src/: __init__.py
techwf/src/config/: __init__.py  config_manager.py  config_validator.py  config_watcher.py  database.py  enhanced_config_manager.py  n_number_schema.py
techwf/src/controllers/: workflow_controller.py
techwf/src/gui/: __init__.py  data_binding_manager.py  dialog_manager.py  domain_gui_binding.py  event_coordinator.py  event_handler_service.py  main_window.py  menu_bar_manager.py  n_number_gui_integration.py  service_manager.py  theme.py  theme_applicator.py  ui_component_manager.py  ui_state_manager.py
techwf/src/models/: n_number_master.py  publication_workflow.py  service_integration.py  workflow_stages.py
techwf/src/repositories/: enhanced_n_number_repository.py  n_number_integration_repository.py  publication_repository.py
techwf/src/services/: config_service.py  file_watcher_service.py  google_sheets_service.py  n_number_service_orchestrator.py  (+3 more)
techwf/temp/: hardcode_detection_report.md
tests/: conftest.py  test_health.py  test_models.py  test_services.py  test_slack_endpoints.py  test_webhook_endpoints.py
(+114 files in other folders)
